# x2md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: docx2md.py  pdf2md.py
src/x2md/: __init__.py  converter.py  excel_converter.py  images.py  mcp_server.py  pdf_converter.py  pdf_images.py  pdf_ocr.py  pdf_tables.py  postprocess.py  tables.py
